--- a/nivelA/unidade2/Grammar/index.html
+++ b/nivelA/unidade2/Grammar/index.html
@@ -251,46 +251,48 @@
                 const doc = new jsPDF();
                 const lines = data.split('\n');
                 let y = 20;
+                const margin = 20;
+                const maxWidth = 170; // Largura máxima para o texto
 
                 doc.addImage('Logo.png', 'PNG', 90, y, 30, 30); // Logo reduzida
                 y += 40;
                 doc.setFontSize(12);
-                doc.text("Name: ____________________________  Date: _______________", 20, y);
+                doc.text("Name: ____________________________  Date: _______________", margin, y);
                 y += 20;
 
                 lines.forEach(line => {
                     if (line.startsWith('Title: ')) {
                         doc.setFontSize(16);
-                        doc.text(line.replace('Title: ', ''), 20, y);
+                        doc.text(line.replace('Title: ', ''), margin, y);
                         y += 20;
                     } else if (line.startsWith('# ')) {
-                        if (y > doc.internal.pageSize.height - 20) {
+                        if (y > doc.internal.pageSize.height - margin) {
                             doc.addPage();
-                            y = 20;
+                            y = margin;
                         }
                         doc.setFontSize(14);
-                        doc.text(line.replace('# ', ''), 20, y);
+                        doc.text(line.replace('# ', ''), margin, y);
                         y += 10;
                     } else if (line.startsWith('Subtitle: ')) {
                         doc.setFontSize(14);
-                        doc.text(line.replace('Subtitle: ', ''), 20, y);
+                        doc.text(line.replace('Subtitle: ', ''), margin, y);
                         y += 10;
                     } else if (line.startsWith('Text: ') || line.includes('→') || line.includes('_______')) {
                         const textWithoutAnswer = line.replace(/\[Answer:.*\]/, '');  // Remove [Answer: ...]
                         doc.setFontSize(12);
-                        const textLines = doc.splitTextToSize(textWithoutAnswer.replace('Text: ', ''), 170); 
-                        doc.text(textLines, 20, y);
+                        const textLines = doc.splitTextToSize(textWithoutAnswer.replace('Text: ', ''), maxWidth);
+                        doc.text(textLines, margin, y);
                         y += textLines.length * 10; 
                     } else {
                         doc.setFontSize(12);
-                        const textLines = doc.splitTextToSize(line, 170); 
-                        doc.text(textLines, 20, y);
+                        const textLines = doc.splitTextToSize(line, maxWidth); 
+                        doc.text(textLines, margin, y);
                         y += textLines.length * 10; 
                     }
 
-                    if (y > doc.internal.pageSize.height - 20) {
+                    if (y > doc.internal.pageSize.height - margin) {
                         doc.addPage();
-                        y = 20;
+                        y = margin;
                     }
                 });
 
