--- a/nivelA/unidade2/Grammar/index.html
+++ b/nivelA/unidade2/Grammar/index.html
@@ -277,7 +277,11 @@
                         doc.setFontSize(14);
                         doc.text(line.replace('Subtitle: ', ''), margin, y);
                         y += 10;
-                    } else if (line.startsWith('Text: ') || line.includes('→') || line.includes('_______')) {
+                    } else if (line.includes('_______')) {  // Linhas com espaços sublinhados
+                        doc.setFontSize(12);
+                        doc.text(line.trim(), margin, y);
+                        y += 10;
+                    } else if (line.startsWith('Text: ') || line.includes('→')) { // Outras linhas de exercícios
                         const textWithoutAnswer = line.replace(/\[Answer:.*\]/, '');  // Remove [Answer: ...]
                         doc.setFontSize(12);
                         const textLines = doc.splitTextToSize(textWithoutAnswer.replace('Text: ', ''), maxWidth);
