index pdf sem respostas

--- a/nivelA/unidade1/Grammar2/index.html
+++ b/nivelA/unidade1/Grammar2/index.html
@@ -187,7 +187,7 @@
     <h1 id="title">Loading title...</h1>
     
     <div class="image-container">
-        <img id="main-imagem" src="image.png" alt="Example Imagem">
+        <img id="main-image" src="image.png" alt="Example Image">
     </div>
 
     <div class="button-container">
@@ -251,54 +251,53 @@
                 const doc = new jsPDF();
                 const lines = data.split('\n');
                 let y = 20;
+                const margin = 20;
+                const maxWidth = 170; // Largura máxima para o texto
 
                 doc.addImage('Logo.png', 'PNG', 90, y, 30, 30); // Logo reduzida
                 y += 40;
                 doc.setFontSize(12);
-                doc.text("Name: ____________________________  Date: _______________", 20, y);
+                doc.text("Name: ____________________________  Date: _______________", margin, y);
                 y += 20;
 
                 lines.forEach(line => {
+                    const textWithoutAnswer = line.replace(/\[Answer:.*?\]/g, '');  // Remover qualquer [Answer: ...]
+
                     if (line.startsWith('Title: ')) {
                         doc.setFontSize(16);
-                        doc.text(line.replace('Title: ', ''), 20, y);
+                        doc.text(line.replace('Title: ', ''), margin, y);
                         y += 20;
                     } else if (line.startsWith('# ')) {
-                        if (y > doc.internal.pageSize.height - 20) {
+                        if (y > doc.internal.pageSize.height - margin) {
                             doc.addPage();
-                            y = 20;
+                            y = margin;
                         }
                         doc.setFontSize(14);
-                        doc.text(line.replace('# ', ''), 20, y);
+                        doc.text(line.replace('# ', ''), margin, y);
                         y += 10;
                     } else if (line.startsWith('Subtitle: ')) {
                         doc.setFontSize(14);
-                        doc.text(line.replace('Subtitle: ', ''), 20, y);
+                        doc.text(line.replace('Subtitle: ', ''), margin, y);
                         y += 10;
-                    } else if (line.startsWith('Text: ')) {
+                    } else if (line.includes('_______')) {  // Linhas com espaços sublinhados
                         doc.setFontSize(12);
-                        const textLines = doc.splitTextToSize(line.replace('Text: ', ''), 170); // Quebrando o texto longo
-                        doc.text(textLines, 20, y);
-                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
-                    } else if (line.startsWith('Examples from the Creation Story:')) {
-                        doc.setFontSize(12);
-                        doc.text(line, 20, y);
+                        doc.text(textWithoutAnswer.trim(), margin, y);
                         y += 10;
-                    } else if (line.startsWith('"')) {
+                    } else if (line.startsWith('Text: ') || line.includes('→')) { // Outras linhas de exercícios
                         doc.setFontSize(12);
-                        const textLines = doc.splitTextToSize(line, 170); // Quebrando o texto longo
-                        doc.text(textLines, 25, y);
-                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
+                        const textLines = doc.splitTextToSize(textWithoutAnswer.replace('Text: ', ''), maxWidth);
+                        doc.text(textLines, margin, y);
+                        y += textLines.length * 10; 
                     } else {
                         doc.setFontSize(12);
-                        const textLines = doc.splitTextToSize(line, 170); // Quebrando o texto longo
-                        doc.text(textLines, 20, y);
-                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
+                        const textLines = doc.splitTextToSize(textWithoutAnswer, maxWidth); 
+                        doc.text(textLines, margin, y);
+                        y += textLines.length * 10; 
                     }
 
-                    if (y > doc.internal.pageSize.height - 20) {
+                    if (y > doc.internal.pageSize.height - margin) {
                         doc.addPage();
-                        y = 20;
+                        y = margin;
                     }
                 });
 
