--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English - Learning English with the Bible</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    
+    <!-- Adicionando o manifesto para PWA -->
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="container">
@@ -24,5 +27,18 @@
             </div>
         </main>
     </div>
+
+    <!-- Registro do service worker -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+                .then(registration => {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                })
+                .catch(error => {
+                    console.log('Service Worker registration failed:', error);
+                });
+        }
+    </script>
 </body>
 </html>
