--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -4,7 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select a Unit - Level A</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .container {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        header h1 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        .units {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+        .unit-button {
+            display: inline-block;
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .unit-button:hover {
+            background-color: #0056b3;
+        }
+        .disabled {
+            pointer-events: none;
+            opacity: 0.5;
+            background-color: #ccc;
+        }
+        .back-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -12,19 +67,19 @@
             <h1>Select a Unit</h1>
         </header>
         <main>
-            <div class="units" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; padding: 20px;">
+            <div class="units">
                 <a href="unidade1/index.html" class="unit-button">Unit 1</a>
                 <a href="unidade2/index.html" class="unit-button">Unit 2</a>
                 <a href="unidade3/index.html" class="unit-button">Unit 3</a>
-                <a href="#" class="unit-button ">Unit 4</a>
-                <a href="#" class="unit-button ">Unit 5</a>
-                <a href="#" class="unit-button ">Unit 6</a>
-                <a href="#" class="unit-button ">Unit 7</a>
-                <a href="#" class="unit-button ">Unit 8</a>
-                <a href="#" class="unit-button ">Unit 9</a>
-                <a href="#" class="unit-button ">Unit 10</a>
+                <a href="unidade4/index.html" class="unit-button">Unit 4</a>
+                <a href="#" class="unit-button disabled">Unit 5</a>
+                <a href="#" class="unit-button disabled">Unit 6</a>
+                <a href="#" class="unit-button disabled">Unit 7</a>
+                <a href="#" class="unit-button disabled">Unit 8</a>
+                <a href="#" class="unit-button disabled">Unit 9</a>
+                <a href="#" class="unit-button disabled">Unit 10</a>
             </div>
-            <button class="back-button" onclick="window.window.location.href='../index.html';">Back</button>
+            <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
         </main>
     </div>
 </body>
