--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -102,15 +102,15 @@
     </div>
 
     <script>
-        // Fases dinâmicas com imagens e links para atividades
+        // Fases dinâmicas com imagens e links para atividades (caminho corrigido)
         const phasesData = [
-            { id: 1, top: '10%', left: '10%', locked: false, image: 'imagem1.jpeg', link: '../unidade2/StoryCards/index.html' },
-            { id: 2, top: '30%', left: '30%', locked: true, image: 'imagem2.jpeg', link: '../unidade2/Flashcards/index.html' },
-            { id: 3, top: '50%', left: '20%', locked: true, image: 'imagem3.jpeg', link: '../unidade2/Flashcards2/index.html' },
-            { id: 4, top: '70%', left: '40%', locked: true, image: 'imagem4.jpeg', link: '../unidade2/MemoryGame/index.html' },
-            { id: 5, top: '50%', left: '60%', locked: true, image: 'imagem5.jpeg', link: '../unidade2/QUIZ/index.html' },
-            { id: 6, top: '30%', left: '70%', locked: true, image: 'imagem6.jpeg', link: '../unidade2/WordSearch/index.html' },
-            { id: 7, top: '10%', left: '80%', locked: true, image: 'imagem7.jpeg', link: '../unidade2/Grammar/index.html' }
+            { id: 1, top: '10%', left: '10%', locked: false, image: 'botoes/missing_letter_button.png', link: '../unidade2/StoryCards/index.html' },
+            { id: 2, top: '30%', left: '30%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
+            { id: 3, top: '50%', left: '20%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards2/index.html' },
+            { id: 4, top: '70%', left: '40%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
+            { id: 5, top: '50%', left: '60%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
+            { id: 6, top: '30%', left: '70%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
+            { id: 7, top: '10%', left: '80%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
         let currentPhase = 0; // Inicia na fase 0 (antes da primeira)
