--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Map - Phases with Images</title>
+    <title>Game Map - Phases with Lock Icon</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,13 +42,29 @@
             border-radius: 50%;
         }
 
-        .phase:hover {
-            transform: scale(1.1);
+        /* Ícone de cadeado para fases bloqueadas */
+        .locked {
+            cursor: not-allowed;
+            position: relative;
         }
 
-        .locked {
-            background-color: gray;
-            cursor: not-allowed;
+        .locked img {
+            filter: grayscale(100%); /* Aplica o filtro preto e branco */
+        }
+
+        .locked::after {
+            content: url('../../imagens/lock_icon.png'); /* Ícone de cadeado */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 25px;
+            height: 25px;
+            z-index: 2;
+        }
+
+        .phase:hover {
+            transform: scale(1.1);
         }
 
         .character {
@@ -102,7 +118,7 @@
     </div>
 
     <script>
-        // Fases dinâmicas com imagens e links para atividades (caminho corrigido)
+        // Fases dinâmicas com imagens e links para atividades
         const phasesData = [
             { id: 1, top: '10%', left: '10%', locked: false, image: 'botoes/missing_letter_button.png', link: '../unidade2/StoryCards/index.html' },
             { id: 2, top: '30%', left: '30%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
