--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Map - Phases with Lock Icon</title>
+    <title>Game Map - Phases with Character</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,18 +42,18 @@
             border-radius: 50%;
         }
 
-        /* Ícone de cadeado para fases bloqueadas */
+        /* Imagem bloqueada com filtro grayscale e ícone de cadeado */
         .locked {
             cursor: not-allowed;
             position: relative;
         }
 
         .locked img {
-            filter: grayscale(100%); /* Aplica o filtro preto e branco */
+            filter: grayscale(100%);
         }
 
         .locked::after {
-            content: url('../../imagens/lock_icon.png'); /* Ícone de cadeado */
+            content: url('../../lock_icon_resized.png'); /* Ícone de cadeado */
             position: absolute;
             top: 50%;
             left: 50%;
@@ -69,9 +69,12 @@
 
         .character {
             position: absolute;
-            background-color: blue; /* Bonequinho simples como um círculo azul */
-            border-radius: 50%;
             transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
+        }
+
+        .character img {
+            width: 60px; /* Tamanho do bonequinho */
+            height: 60px;
         }
 
         /* Responsividade */
@@ -81,7 +84,7 @@
                 height: 80px;
             }
 
-            .character {
+            .character img {
                 width: 60px;
                 height: 60px;
             }
@@ -93,7 +96,7 @@
                 height: 60px;
             }
 
-            .character {
+            .character img {
                 width: 50px;
                 height: 50px;
             }
@@ -105,7 +108,7 @@
                 height: 50px;
             }
 
-            .character {
+            .character img {
                 width: 40px;
                 height: 40px;
             }
@@ -118,7 +121,7 @@
     </div>
 
     <script>
-        // Fases dinâmicas com imagens e links para atividades
+        // Fases dinâmicas com imagens, links e desbloqueio manual
         const phasesData = [
             { id: 1, top: '10%', left: '10%', locked: false, image: 'botoes/missing_letter_button.png', link: '../unidade2/StoryCards/index.html' },
             { id: 2, top: '30%', left: '30%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
@@ -135,7 +138,7 @@
         function generatePhases() {
             const mapContainer = document.getElementById('mapContainer');
 
-            phasesData.forEach(phase => {
+            phasesData.forEach((phase, index) => {
                 const phaseDiv = document.createElement('div');
                 phaseDiv.classList.add('phase');
                 if (phase.locked) {
@@ -155,7 +158,8 @@
                 // Adiciona o evento de clique
                 phaseDiv.addEventListener('click', function () {
                     if (!phase.locked) {
-                        window.location.href = phase.link; // Redireciona para o HTML da fase
+                        moveCharacterToPhase(index); // Move o bonequinho
+                        unlockNextPhase(index); // Desbloqueia a próxima fase
                     } else {
                         alert('This phase is locked.');
                     }
@@ -174,6 +178,11 @@
             const character = document.createElement('div');
             character.classList.add('character');
             character.id = 'gameCharacter';
+
+            // Adiciona a imagem do bonequinho
+            const characterImg = document.createElement('img');
+            characterImg.src = '../../imagens/bonequinho.png'; // Certifique-se de que o bonequinho.png está no caminho correto
+            character.appendChild(characterImg);
 
             // Posiciona o bonequinho na primeira fase
             const firstPhase = phasesData[0];
@@ -194,6 +203,16 @@
             character.style.left = targetPhase.left;
 
             currentPhase = phaseIndex; // Atualiza a fase atual
+        }
+
+        // Função para desbloquear a próxima fase
+        function unlockNextPhase(phaseIndex) {
+            const nextPhaseIndex = phaseIndex + 1;
+            if (nextPhaseIndex < phasesData.length) {
+                phasesData[nextPhaseIndex].locked = false; // Desbloqueia a fase seguinte
+                const nextPhaseDiv = document.getElementsByClassName('phase')[nextPhaseIndex];
+                nextPhaseDiv.classList.remove('locked'); // Remove a classe 'locked' visualmente
+            }
         }
 
         // Chama a função ao carregar a página
