--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Map - Phases with Character</title>
+    <title>Dynamic Game Map with Phases</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
         .map-container {
             width: 90%;
             height: 80vh;
-            background-image: url('path_to_your_background_image.jpg'); /* Adicione a imagem do mapa */
+            background-image: url('path_to_your_map_image.jpg'); /* Substituir pela imagem correta do mapa */
             background-size: cover;
             position: relative;
         }
@@ -42,29 +42,8 @@
             border-radius: 50%;
         }
 
-        /* Imagem bloqueada com filtro grayscale e ícone de cadeado */
-        .locked {
-            cursor: not-allowed;
-            position: relative;
-        }
-
         .locked img {
-            filter: grayscale(100%);
-        }
-
-        .locked::after {
-            content: url('../../lock_icon_resized.png'); /* Ícone de cadeado */
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 25px;
-            height: 25px;
-            z-index: 2;
-        }
-
-        .phase:hover {
-            transform: scale(1.1);
+            filter: grayscale(100%); /* Imagem em preto e branco para fases bloqueadas */
         }
 
         .character {
@@ -117,47 +96,42 @@
 </head>
 <body>
     <div class="map-container" id="mapContainer">
-        <!-- Fases com imagens e links serão geradas dinamicamente aqui -->
+        <!-- As fases e o bonequinho serão gerados dinamicamente -->
     </div>
 
     <script>
-        // Fases dinâmicas com imagens, links e desbloqueio manual
-        const phasesData = [
-            { id: 1, top: '10%', left: '10%', locked: false, image: 'botoes/missing_letter_button.png', link: '../unidade2/StoryCards/index.html' },
-            { id: 2, top: '30%', left: '30%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
-            { id: 3, top: '50%', left: '20%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards2/index.html' },
-            { id: 4, top: '70%', left: '40%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
-            { id: 5, top: '50%', left: '60%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
-            { id: 6, top: '30%', left: '70%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
-            { id: 7, top: '10%', left: '80%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
+        // Dados de exemplo das atividades (fases) e suas posições ao longo da estrada
+        const activities = [
+            { id: 1, name: "Activity 1", top: '10%', left: '10%', locked: false },
+            { id: 2, name: "Activity 2", top: '30%', left: '20%', locked: true },
+            { id: 3, name: "Activity 3", top: '50%', left: '35%', locked: true },
+            { id: 4, name: "Activity 4", top: '70%', left: '45%', locked: true },
+            { id: 5, name: "Activity 5", top: '85%', left: '65%', locked: true },
+            { id: 6, name: "Activity 6", top: '70%', left: '80%', locked: true },
+            { id: 7, name: "Activity 7", top: '50%', left: '90%', locked: true },
         ];
-
-        let currentPhase = 0; // Inicia na fase 0 (antes da primeira)
 
         // Função para gerar fases dinamicamente
         function generatePhases() {
             const mapContainer = document.getElementById('mapContainer');
 
-            phasesData.forEach((phase, index) => {
+            activities.forEach((activity, index) => {
                 const phaseDiv = document.createElement('div');
                 phaseDiv.classList.add('phase');
-                if (phase.locked) {
+                if (activity.locked) {
                     phaseDiv.classList.add('locked');
                 }
 
-                // Adiciona a imagem correspondente à fase
-                const img = document.createElement('img');
-                img.src = `../../imagens/${phase.image}`;
-                img.alt = `Phase ${phase.id}`;
-                phaseDiv.appendChild(img);
+                // Adiciona o nome da fase
+                phaseDiv.textContent = activity.name;
 
                 // Define a posição de cada fase no mapa
-                phaseDiv.style.top = phase.top;
-                phaseDiv.style.left = phase.left;
+                phaseDiv.style.top = activity.top;
+                phaseDiv.style.left = activity.left;
 
                 // Adiciona o evento de clique
                 phaseDiv.addEventListener('click', function () {
-                    if (!phase.locked) {
+                    if (!activity.locked) {
                         moveCharacterToPhase(index); // Move o bonequinho
                         unlockNextPhase(index); // Desbloqueia a próxima fase
                     } else {
@@ -185,7 +159,7 @@
             character.appendChild(characterImg);
 
             // Posiciona o bonequinho na primeira fase
-            const firstPhase = phasesData[0];
+            const firstPhase = activities[0];
             character.style.top = firstPhase.top;
             character.style.left = firstPhase.left;
 
@@ -194,22 +168,20 @@
 
         // Função para mover o bonequinho entre as fases
         function moveCharacterToPhase(phaseIndex) {
-            if (phaseIndex >= phasesData.length) return;
+            if (phaseIndex >= activities.length) return;
 
             const character = document.getElementById('gameCharacter');
-            const targetPhase = phasesData[phaseIndex];
+            const targetPhase = activities[phaseIndex];
 
             character.style.top = targetPhase.top;
             character.style.left = targetPhase.left;
-
-            currentPhase = phaseIndex; // Atualiza a fase atual
         }
 
         // Função para desbloquear a próxima fase
         function unlockNextPhase(phaseIndex) {
             const nextPhaseIndex = phaseIndex + 1;
-            if (nextPhaseIndex < phasesData.length) {
-                phasesData[nextPhaseIndex].locked = false; // Desbloqueia a fase seguinte
+            if (nextPhaseIndex < activities.length) {
+                activities[nextPhaseIndex].locked = false; // Desbloqueia a fase seguinte
                 const nextPhaseDiv = document.getElementsByClassName('phase')[nextPhaseIndex];
                 nextPhaseDiv.classList.remove('locked'); // Remove a classe 'locked' visualmente
             }
