--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Game Map with Phases</title>
+    <title>Dynamic Game Map with Phases and Activities</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
         .map-container {
             width: 90%;
             height: 80vh;
-            background-image: url('path_to_your_map_image.jpg'); /* Substituir pela imagem correta do mapa */
+            background-image: url('../../imagens/map_background.png'); /* Background do mapa */
             background-size: cover;
             position: relative;
         }
@@ -43,7 +43,18 @@
         }
 
         .locked img {
-            filter: grayscale(100%); /* Imagem em preto e branco para fases bloqueadas */
+            filter: grayscale(100%); /* Filtro para fases bloqueadas */
+        }
+
+        .locked::after {
+            content: url('../../imagens/lock_icon_resized.png'); /* Ícone de cadeado */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 25px;
+            height: 25px;
+            z-index: 2;
         }
 
         .character {
@@ -100,18 +111,17 @@
     </div>
 
     <script>
-        // Dados de exemplo das atividades (fases) e suas posições ao longo da estrada
+        // Dados dinâmicos das atividades (fases) com imagens e links
         const activities = [
-            { id: 1, name: "Activity 1", top: '10%', left: '10%', locked: false },
-            { id: 2, name: "Activity 2", top: '30%', left: '20%', locked: true },
-            { id: 3, name: "Activity 3", top: '50%', left: '35%', locked: true },
-            { id: 4, name: "Activity 4", top: '70%', left: '45%', locked: true },
-            { id: 5, name: "Activity 5", top: '85%', left: '65%', locked: true },
-            { id: 6, name: "Activity 6", top: '70%', left: '80%', locked: true },
-            { id: 7, name: "Activity 7", top: '50%', left: '90%', locked: true },
+            { id: 1, name: "Activity 1", top: '10%', left: '10%', locked: false, image: 'botoes/storycards_button.png', link: '../unidade2/StoryCards/index.html' },
+            { id: 2, name: "Activity 2", top: '30%', left: '20%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
+            { id: 3, name: "Activity 3", top: '50%', left: '35%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
+            { id: 4, name: "Activity 4", top: '70%', left: '45%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
+            { id: 5, name: "Activity 5", top: '85%', left: '65%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
+            { id: 6, name: "Activity 6", top: '70%', left: '80%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
-        // Função para gerar fases dinamicamente
+        // Função para gerar as fases dinamicamente
         function generatePhases() {
             const mapContainer = document.getElementById('mapContainer');
 
@@ -122,8 +132,11 @@
                     phaseDiv.classList.add('locked');
                 }
 
-                // Adiciona o nome da fase
-                phaseDiv.textContent = activity.name;
+                // Adiciona a imagem correspondente à fase
+                const img = document.createElement('img');
+                img.src = `../../imagens/${activity.image}`;
+                img.alt = activity.name;
+                phaseDiv.appendChild(img);
 
                 // Define a posição de cada fase no mapa
                 phaseDiv.style.top = activity.top;
@@ -134,6 +147,7 @@
                     if (!activity.locked) {
                         moveCharacterToPhase(index); // Move o bonequinho
                         unlockNextPhase(index); // Desbloqueia a próxima fase
+                        window.location.href = activity.link; // Redireciona para o link da fase
                     } else {
                         alert('This phase is locked.');
                     }
