--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Game Map with Phases and Activities</title>
+    <title>Improved Dynamic Game Map</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,31 +19,40 @@
         .map-container {
             width: 90%;
             height: 80vh;
-            background-image: url('../../imagens/map_background.png'); /* Background do mapa */
+            background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
             background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             position: relative;
+            filter: brightness(0.9); /* Leve escurecimento do fundo */
         }
 
         .phase {
             position: absolute;
-            border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: white; /* Fundo para destacar a imagem */
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo transparente */
+            border-radius: 50%;
+            padding: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
         }
 
         .phase img {
-            width: 100%;
-            height: 100%;
+            width: 80px; /* Tamanho dos ícones ajustado */
+            height: 80px;
             border-radius: 50%;
         }
 
+        .phase:hover {
+            transform: scale(1.1); /* Aumenta levemente ao passar o mouse */
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra mais forte ao hover */
+        }
+
         .locked img {
-            filter: grayscale(100%); /* Filtro para fases bloqueadas */
+            filter: grayscale(100%); /* Filtro preto e branco para fases bloqueadas */
         }
 
         .locked::after {
@@ -67,9 +76,20 @@
             height: 60px;
         }
 
+        /* Setas ou indicadores visuais */
+        .arrow {
+            position: absolute;
+            width: 30px;
+            height: 30px;
+            background-image: url('../../imagens/arrow.png'); /* Imagem da seta */
+            background-size: contain;
+            background-repeat: no-repeat;
+            z-index: 1;
+        }
+
         /* Responsividade */
         @media (min-width: 1024px) {
-            .phase {
+            .phase img {
                 width: 80px;
                 height: 80px;
             }
@@ -81,7 +101,7 @@
         }
 
         @media (min-width: 600px) and (max-width: 1023px) {
-            .phase {
+            .phase img {
                 width: 60px;
                 height: 60px;
             }
@@ -93,7 +113,7 @@
         }
 
         @media (max-width: 599px) {
-            .phase {
+            .phase img {
                 width: 50px;
                 height: 50px;
             }
@@ -107,11 +127,11 @@
 </head>
 <body>
     <div class="map-container" id="mapContainer">
-        <!-- As fases e o bonequinho serão gerados dinamicamente -->
+        <!-- Fases, bonequinho e setas serão gerados dinamicamente -->
     </div>
 
     <script>
-        // Dados dinâmicos das atividades (fases) com imagens e links
+        // Dados das atividades (fases) com imagens, links e coordenadas
         const activities = [
             { id: 1, name: "Activity 1", top: '10%', left: '10%', locked: false, image: 'botoes/storycards_button.png', link: '../unidade2/StoryCards/index.html' },
             { id: 2, name: "Activity 2", top: '30%', left: '20%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
@@ -121,7 +141,7 @@
             { id: 6, name: "Activity 6", top: '70%', left: '80%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
-        // Função para gerar as fases dinamicamente
+        // Função para gerar fases dinamicamente
         function generatePhases() {
             const mapContainer = document.getElementById('mapContainer');
 
@@ -155,10 +175,26 @@
 
                 // Adiciona a fase ao mapa
                 mapContainer.appendChild(phaseDiv);
+
+                // Adiciona setas (indicadores visuais) entre as fases
+                if (index < activities.length - 1) {
+                    const arrowDiv = document.createElement('div');
+                    arrowDiv.classList.add('arrow');
+                    arrowDiv.style.top = calculateMidPoint(activity.top, activities[index + 1].top);
+                    arrowDiv.style.left = calculateMidPoint(activity.left, activities[index + 1].left);
+                    mapContainer.appendChild(arrowDiv);
+                }
             });
 
             // Adiciona o bonequinho ao mapa
             addCharacter();
+        }
+
+        // Função para calcular o ponto médio entre duas posições
+        function calculateMidPoint(pos1, pos2) {
+            const p1 = parseFloat(pos1);
+            const p2 = parseFloat(pos2);
+            return `${(p1 + p2) / 2}%`;
         }
 
         // Função para adicionar o bonequinho no mapa
