--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Improved Dynamic Game Map</title>
+    <title>Game Map with Dotted Line</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,10 +19,8 @@
         .map-container {
             width: 90%;
             height: 80vh;
-            background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
+            background-image: url('../../imagens/map_background.png'); /* Imagem do mapa */
             background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
             position: relative;
             filter: brightness(0.9); /* Leve escurecimento do fundo */
         }
@@ -41,18 +39,18 @@
         }
 
         .phase img {
-            width: 80px; /* Tamanho dos ícones ajustado */
+            width: 80px;
             height: 80px;
             border-radius: 50%;
         }
 
         .phase:hover {
-            transform: scale(1.1); /* Aumenta levemente ao passar o mouse */
+            transform: scale(1.1);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra mais forte ao hover */
         }
 
         .locked img {
-            filter: grayscale(100%); /* Filtro preto e branco para fases bloqueadas */
+            filter: grayscale(100%);
         }
 
         .locked::after {
@@ -72,19 +70,15 @@
         }
 
         .character img {
-            width: 60px; /* Tamanho do bonequinho */
+            width: 60px;
             height: 60px;
         }
 
-        /* Setas ou indicadores visuais */
-        .arrow {
+        /* Estilo da linha pontilhada */
+        .dotted-line {
             position: absolute;
-            width: 30px;
-            height: 30px;
-            background-image: url('../../imagens/arrow.png'); /* Imagem da seta */
-            background-size: contain;
-            background-repeat: no-repeat;
-            z-index: 1;
+            border-top: 5px dashed red; /* Linha pontilhada grossa e colorida */
+            z-index: 0;
         }
 
         /* Responsividade */
@@ -127,11 +121,11 @@
 </head>
 <body>
     <div class="map-container" id="mapContainer">
-        <!-- Fases, bonequinho e setas serão gerados dinamicamente -->
+        <!-- Fases e bonequinho serão gerados dinamicamente -->
     </div>
 
     <script>
-        // Dados das atividades (fases) com imagens, links e coordenadas
+        // Dados dinâmicos das atividades (fases)
         const activities = [
             { id: 1, name: "Activity 1", top: '10%', left: '10%', locked: false, image: 'botoes/storycards_button.png', link: '../unidade2/StoryCards/index.html' },
             { id: 2, name: "Activity 2", top: '30%', left: '20%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
@@ -141,7 +135,7 @@
             { id: 6, name: "Activity 6", top: '70%', left: '80%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
-        // Função para gerar fases dinamicamente
+        // Função para gerar fases e linhas pontilhadas dinamicamente
         function generatePhases() {
             const mapContainer = document.getElementById('mapContainer');
 
@@ -176,13 +170,14 @@
                 // Adiciona a fase ao mapa
                 mapContainer.appendChild(phaseDiv);
 
-                // Adiciona setas (indicadores visuais) entre as fases
+                // Adiciona a linha pontilhada entre as fases
                 if (index < activities.length - 1) {
-                    const arrowDiv = document.createElement('div');
-                    arrowDiv.classList.add('arrow');
-                    arrowDiv.style.top = calculateMidPoint(activity.top, activities[index + 1].top);
-                    arrowDiv.style.left = calculateMidPoint(activity.left, activities[index + 1].left);
-                    mapContainer.appendChild(arrowDiv);
+                    const lineDiv = document.createElement('div');
+                    lineDiv.classList.add('dotted-line');
+                    lineDiv.style.top = calculateMidPoint(activity.top, activities[index + 1].top);
+                    lineDiv.style.left = activity.left;
+                    lineDiv.style.width = calculateDistance(activity.left, activities[index + 1].left);
+                    mapContainer.appendChild(lineDiv);
                 }
             });
 
@@ -190,11 +185,18 @@
             addCharacter();
         }
 
-        // Função para calcular o ponto médio entre duas posições
+        // Função para calcular o ponto médio vertical entre duas fases
         function calculateMidPoint(pos1, pos2) {
             const p1 = parseFloat(pos1);
             const p2 = parseFloat(pos2);
             return `${(p1 + p2) / 2}%`;
+        }
+
+        // Função para calcular a distância entre duas fases
+        function calculateDistance(left1, left2) {
+            const l1 = parseFloat(left1);
+            const l2 = parseFloat(left2);
+            return `${Math.abs(l1 - l2)}%`;
         }
 
         // Função para adicionar o bonequinho no mapa
